Minor fixes in PartitionedIndexService and QueryServiceImpl